--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -19,29 +19,36 @@
 
         <View
             android:id="@+id/indicator1"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
             android:layout_margin="2dp"
             android:background="@drawable/indicator_bg" />
 
         <View
             android:id="@+id/indicator2"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
             android:layout_margin="2dp"
             android:background="@drawable/indicator_bg" />
 
         <View
             android:id="@+id/indicator3"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
             android:layout_margin="2dp"
             android:background="@drawable/indicator_bg" />
 
         <View
             android:id="@+id/indicator4"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_margin="2dp"
+            android:background="@drawable/indicator_bg" />
+
+        <View
+            android:id="@+id/indicator5"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
             android:layout_margin="2dp"
             android:background="@drawable/indicator_bg" />
     </LinearLayout>
