--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,21 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="food_text_view">
+        <item name="android:textColor">
+            @color/colorWhite
+        </item>
+        <item name="android:textSize">
+            @dimen/foodTextSize
+        </item>
+        <item name="android:gravity">
+            center
+        </item>
+        <item name="android:fontFamily">
+            sans-serif
+        </item>
+        <item name="android:lineSpacingExtra">
+            @dimen/foodTextLineSpacing
+        </item>
+    </style>
 </resources>
