--- a/app/src/main/res/layout/page2.xml
+++ b/app/src/main/res/layout/page2.xml
@@ -50,6 +50,7 @@
 
 
     <ImageView
+        android:id="@+id/brownRectangle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
@@ -163,6 +164,61 @@
         android:src="@drawable/forward_arrow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        style="@style/food_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="בחירת תוספת עיקרית"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/brownRectangle" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        style="@style/food_text_view"
+        android:text="גבינה צהובה"
+        app:layout_constraintEnd_toEndOf="@+id/cheese_icon"
+        app:layout_constraintStart_toStartOf="@+id/cheese_icon"
+        app:layout_constraintTop_toBottomOf="@+id/cheese_icon" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginTop="8dp"
+        android:text="סלמי"
+        style="@style/food_text_view"
+        app:layout_constraintEnd_toEndOf="@+id/salamy_icon"
+        app:layout_constraintStart_toStartOf="@+id/salamy_icon"
+        app:layout_constraintTop_toBottomOf="@+id/salamy_icon" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginTop="8dp"
+        style="@style/food_text_view"
+        android:text="ביצה"
+        app:layout_constraintEnd_toEndOf="@+id/egg_icon"
+        app:layout_constraintStart_toStartOf="@+id/egg_icon"
+        app:layout_constraintTop_toBottomOf="@+id/egg_icon" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="קציצה"
+        style="@style/food_text_view"
+        app:layout_constraintEnd_toEndOf="@+id/meat_icon"
+        app:layout_constraintStart_toStartOf="@+id/meat_icon"
+        app:layout_constraintTop_toBottomOf="@+id/meat_icon" />
 
 
 </android.support.constraint.ConstraintLayout>
