--- a/app/src/main/res/layout/page1.xml
+++ b/app/src/main/res/layout/page1.xml
@@ -8,7 +8,7 @@
     android:gravity="center">
 
     <ImageView
-        android:id="@+id/home_btn"
+        android:alpha="0.5"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="18dp"
@@ -152,15 +152,6 @@
         app:layout_constraintStart_toEndOf="@+id/five"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <ImageView
-        android:id="@+id/arrowLeft"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginBottom="17dp"
-        android:src="@drawable/backward_arrow"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/arrowRight"
