--- a/app/src/main/res/layout/page2.xml
+++ b/app/src/main/res/layout/page2.xml
@@ -175,7 +175,7 @@
         android:layout_height="16dp"
         android:layout_marginStart="29dp"
         android:layout_marginBottom="17dp"
-        android:src="@drawable/backward_arrow"
+        android:src="@drawable/back_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
