Remove New Activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.oran.mysandwich.New" >
+    tools:context="com.oran.mysandwich.MainActivity" >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
@@ -10,7 +10,7 @@
         android:layout_height="fill_parent" />
 
     <LinearLayout
-        android:layout_margin="10dp"
+         android:layout_margin="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
