--- a/app/src/main/res/layout/page3.xml
+++ b/app/src/main/res/layout/page3.xml
@@ -115,6 +115,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/brownRectangle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
@@ -229,5 +230,59 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/textView"
+        style="@style/food_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="בחירת תוספת"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/brownRectangle" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        style="@style/food_text_view"
+        android:text="עגבניה"
+        app:layout_constraintEnd_toEndOf="@+id/tomato_icon"
+        app:layout_constraintStart_toStartOf="@+id/tomato_icon"
+        app:layout_constraintTop_toBottomOf="@+id/tomato_icon" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginTop="8dp"
+        android:text="מלפפון"
+        style="@style/food_text_view"
+        app:layout_constraintEnd_toEndOf="@+id/cucumber_icon"
+        app:layout_constraintStart_toStartOf="@+id/cucumber_icon"
+        app:layout_constraintTop_toBottomOf="@+id/cucumber_icon" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginTop="8dp"
+        style="@style/food_text_view"
+        android:text="מלפפון חמוץ"
+        app:layout_constraintEnd_toEndOf="@+id/pickle_icon"
+        app:layout_constraintStart_toStartOf="@+id/pickle_icon"
+        app:layout_constraintTop_toBottomOf="@+id/pickle_icon" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="חסה"
+        style="@style/food_text_view"
+        app:layout_constraintEnd_toEndOf="@+id/lettuce_icon"
+        app:layout_constraintStart_toStartOf="@+id/lettuce_icon"
+        app:layout_constraintTop_toBottomOf="@+id/lettuce_icon" />
 
 </android.support.constraint.ConstraintLayout>
