--- a/app/src/main/res/layout/page4.xml
+++ b/app/src/main/res/layout/page4.xml
@@ -126,6 +126,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/brownRectangle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
@@ -241,5 +242,59 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/textView"
+        style="@style/food_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="בחירת ממרח"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/brownRectangle" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        style="@style/food_text_view"
+        android:text="חרדל"
+        app:layout_constraintEnd_toEndOf="@+id/hardal_icon"
+        app:layout_constraintStart_toStartOf="@+id/hardal_icon"
+        app:layout_constraintTop_toBottomOf="@+id/hardal_icon" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginTop="8dp"
+        android:text="קטשופ"
+        style="@style/food_text_view"
+        app:layout_constraintEnd_toEndOf="@+id/ketshup_icon"
+        app:layout_constraintStart_toStartOf="@+id/ketshup_icon"
+        app:layout_constraintTop_toBottomOf="@+id/ketshup_icon" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginTop="8dp"
+        style="@style/food_text_view"
+        android:text="מיונז"
+        app:layout_constraintEnd_toEndOf="@+id/mayo_icon"
+        app:layout_constraintStart_toStartOf="@+id/mayo_icon"
+        app:layout_constraintTop_toBottomOf="@+id/mayo_icon" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="טחינה"
+        style="@style/food_text_view"
+        app:layout_constraintEnd_toEndOf="@+id/thina_icon"
+        app:layout_constraintStart_toStartOf="@+id/thina_icon"
+        app:layout_constraintTop_toBottomOf="@+id/thina_icon" />
 
 </android.support.constraint.ConstraintLayout>
