--- a/app/src/main/res/layout/page2.xml
+++ b/app/src/main/res/layout/page2.xml
@@ -180,7 +180,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/arrowRight"
+        android:id="@+id/arrowRight1"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginEnd="29dp"
