--- a/app/src/main/res/layout/page3.xml
+++ b/app/src/main/res/layout/page3.xml
@@ -211,7 +211,7 @@
         app:layout_constraintVertical_bias="0.505" />
 
     <ImageView
-        android:id="@+id/arrowLeft"
+        android:id="@+id/arrowLeft1"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="29dp"
@@ -221,7 +221,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/arrowRight"
+        android:id="@+id/arrowRight2"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginEnd="29dp"
