--- a/app/src/main/res/layout/page4.xml
+++ b/app/src/main/res/layout/page4.xml
@@ -223,7 +223,7 @@
         app:layout_constraintVertical_bias="0.505" />
 
     <ImageView
-        android:id="@+id/arrowLeft"
+        android:id="@+id/arrowLeft2"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="29dp"
@@ -233,7 +233,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/arrowRight"
+        android:id="@+id/arrowRight3"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginEnd="29dp"
