Update the page 5  read names in a page

--- a/app/src/main/res/layout/page1.xml
+++ b/app/src/main/res/layout/page1.xml
@@ -172,7 +172,7 @@
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="בחירת סוג לחם"
+        android:text="@string/choose_braid_kind"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
@@ -182,7 +182,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         style="@style/food_text_view"
-        android:text="לחם שחור"
+        android:text="@string/black_braid"
         app:layout_constraintEnd_toEndOf="@+id/tree"
         app:layout_constraintStart_toStartOf="@+id/tree"
         app:layout_constraintTop_toBottomOf="@+id/tree" />
@@ -192,7 +192,7 @@
         android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
-        android:text="לחם לבן"
+        android:text="@string/withe_braid"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/two"
         app:layout_constraintStart_toStartOf="@+id/two"
@@ -204,7 +204,7 @@
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
         style="@style/food_text_view"
-        android:text="פיתה"
+        android:text="@string/pita"
         app:layout_constraintEnd_toEndOf="@+id/one"
         app:layout_constraintStart_toStartOf="@+id/one"
         app:layout_constraintTop_toBottomOf="@+id/one" />
@@ -214,7 +214,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="קראסון"
+        android:text="@string/kruason"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/fore"
         app:layout_constraintStart_toStartOf="@+id/fore"
@@ -225,7 +225,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="באגט"
+        android:text="@string/baget"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/five"
         app:layout_constraintStart_toStartOf="@+id/five"
@@ -236,7 +236,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="לחמניה"
+        android:text="@string/lahmania"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/six"
         app:layout_constraintStart_toStartOf="@+id/six"
