--- a/app/src/main/res/layout/page2.xml
+++ b/app/src/main/res/layout/page2.xml
@@ -196,7 +196,7 @@
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="בחירת תוספת עיקרית"
+        android:text="@string/choose_main_addition"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/brownRectangle" />
 
@@ -206,7 +206,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         style="@style/food_text_view"
-        android:text="גבינה צהובה"
+        android:text="@string/yello_cheese"
         app:layout_constraintEnd_toEndOf="@+id/cheese_icon"
         app:layout_constraintStart_toStartOf="@+id/cheese_icon"
         app:layout_constraintTop_toBottomOf="@+id/cheese_icon" />
@@ -216,7 +216,7 @@
         android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
-        android:text="סלמי"
+        android:text="@string/salami"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/salamy_icon"
         app:layout_constraintStart_toStartOf="@+id/salamy_icon"
@@ -228,7 +228,7 @@
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
         style="@style/food_text_view"
-        android:text="ביצה"
+        android:text="@string/egg"
         app:layout_constraintEnd_toEndOf="@+id/egg_icon"
         app:layout_constraintStart_toStartOf="@+id/egg_icon"
         app:layout_constraintTop_toBottomOf="@+id/egg_icon" />
@@ -238,7 +238,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="קציצה"
+        android:text="@string/meetlof"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/meat_icon"
         app:layout_constraintStart_toStartOf="@+id/meat_icon"
