--- a/app/src/main/res/layout/page3.xml
+++ b/app/src/main/res/layout/page3.xml
@@ -237,7 +237,7 @@
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="בחירת תוספת"
+        android:text="@string/add_edition"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/brownRectangle" />
 
@@ -247,7 +247,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         style="@style/food_text_view"
-        android:text="עגבניה"
+        android:text="@string/tometo"
         app:layout_constraintEnd_toEndOf="@+id/tomato_icon"
         app:layout_constraintStart_toStartOf="@+id/tomato_icon"
         app:layout_constraintTop_toBottomOf="@+id/tomato_icon" />
@@ -257,7 +257,7 @@
         android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
-        android:text="מלפפון"
+        android:text="@string/melaffon"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/cucumber_icon"
         app:layout_constraintStart_toStartOf="@+id/cucumber_icon"
@@ -269,7 +269,7 @@
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
         style="@style/food_text_view"
-        android:text="מלפפון חמוץ"
+        android:text="@string/melaffon_hamuts"
         app:layout_constraintEnd_toEndOf="@+id/pickle_icon"
         app:layout_constraintStart_toStartOf="@+id/pickle_icon"
         app:layout_constraintTop_toBottomOf="@+id/pickle_icon" />
@@ -279,7 +279,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="חסה"
+        android:text="@string/hasa"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/lettuce_icon"
         app:layout_constraintStart_toStartOf="@+id/lettuce_icon"
