--- a/app/src/main/res/layout/page4.xml
+++ b/app/src/main/res/layout/page4.xml
@@ -249,7 +249,7 @@
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="בחירת ממרח"
+        android:text="@string/choose_mimrha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/brownRectangle" />
 
@@ -259,7 +259,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         style="@style/food_text_view"
-        android:text="חרדל"
+        android:text="@string/hardal"
         app:layout_constraintEnd_toEndOf="@+id/hardal_icon"
         app:layout_constraintStart_toStartOf="@+id/hardal_icon"
         app:layout_constraintTop_toBottomOf="@+id/hardal_icon" />
@@ -269,7 +269,7 @@
         android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
-        android:text="קטשופ"
+        android:text="@string/ketshope"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/ketshup_icon"
         app:layout_constraintStart_toStartOf="@+id/ketshup_icon"
@@ -281,7 +281,7 @@
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
         style="@style/food_text_view"
-        android:text="מיונז"
+        android:text="@string/mauonez"
         app:layout_constraintEnd_toEndOf="@+id/mayo_icon"
         app:layout_constraintStart_toStartOf="@+id/mayo_icon"
         app:layout_constraintTop_toBottomOf="@+id/mayo_icon" />
@@ -291,7 +291,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="טחינה"
+        android:text="@string/thina"
         style="@style/food_text_view"
         app:layout_constraintEnd_toEndOf="@+id/thina_icon"
         app:layout_constraintStart_toStartOf="@+id/thina_icon"
